# loadout

./: .gitignore  .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/loadout/: __init__.py  _hashing.py  _prompts.py  _transforms.py  _version.py  callbacks.py  checker.py  discovery.py  exceptions.py  installer.py  models.py  registry.py
src/loadout/adapters/: __init__.py  _base.py  _protocol.py  claude.py  cursor.py  opencode.py
tests/: conftest.py  test_checker.py  test_discovery.py  test_hashing.py  test_installer.py  test_models.py  test_registry.py  test_transforms.py
tests/adapters/: test_claude.py  test_cursor.py  test_opencode.py
